[gd_scene load_steps=52 format=2]

[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_0.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_2.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_3.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_1.png" type="Texture" id=4]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_4.png" type="Texture" id=5]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_6.png" type="Texture" id=6]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_7.png" type="Texture" id=7]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_1.png" type="Texture" id=8]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_0.png" type="Texture" id=9]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Attack/LightBandit_Attack_5.png" type="Texture" id=10]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_2.png" type="Texture" id=11]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Combat Idle/LightBandit_Combat Idle_3.png" type="Texture" id=12]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Hurt/LightBandit_Hurt_0.png" type="Texture" id=13]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_4.png" type="Texture" id=14]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_4.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_2.png" type="Texture" id=16]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Jump/LightBandit_Jump_0.png" type="Texture" id=17]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_5.png" type="Texture" id=18]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_0.png" type="Texture" id=19]
[ext_resource path="res://src/Actors/Bandit.gd" type="Script" id=20]
[ext_resource path="res://src/UserInterface/EnemyHealthBar.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_2.png" type="Texture" id=22]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_1.png" type="Texture" id=23]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Idle/LightBandit_Idle_0.png" type="Texture" id=24]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_7.png" type="Texture" id=25]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_0.png" type="Texture" id=26]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_1.png" type="Texture" id=27]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Hurt/LightBandit_Hurt_1.png" type="Texture" id=28]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Death/LightBandit_Death_0.png" type="Texture" id=29]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Idle/LightBandit_Idle_2.png" type="Texture" id=30]
[ext_resource path="res://src/StateMachine/EnemySM.gd" type="Script" id=31]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Idle/LightBandit_Idle_3.png" type="Texture" id=32]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_6.png" type="Texture" id=33]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_5.png" type="Texture" id=34]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Recover/LightBandit_Recover_3.png" type="Texture" id=35]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_7.png" type="Texture" id=36]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_3.png" type="Texture" id=37]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Run/LightBandit_Run_6.png" type="Texture" id=38]
[ext_resource path="res://assets/Enemies and Bosses/Bandits/Bandits/Sprites/Light Bandit/Idle/LightBandit_Idle_1.png" type="Texture" id=39]
[ext_resource path="res://assets/Effects/Alert_sprite.png" type="Texture" id=40]
[ext_resource path="res://assets/Effects/question_mark_sprite.png" type="Texture" id=41]
[ext_resource path="res://assets/mine/FlashShader.tres" type="Material" id=42]
[ext_resource path="res://assets/mine/damage_flash.tres" type="Animation" id=43]
[ext_resource path="res://assets/mine/ActorsPopUp.tres" type="Animation" id=44]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 39 ), ExtResource( 30 ), ExtResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 37 ), ExtResource( 14 ), ExtResource( 34 ), ExtResource( 38 ), ExtResource( 36 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 33 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 35 ), ExtResource( 16 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 29 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "CombatIdle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 28 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.24178
height = 16.3784

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.88235, 19.5316 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.9062, 12.2628 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "alert",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "question_mark",
"speed": 0.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="LightBandit" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
collision_mask = 264
script = ExtResource( 20 )
move_speed = 80.0
_damage = 40
max_health = 250.0
experience = 60

[node name="HealthBar" parent="." instance=ExtResource( 21 )]
visible = false
margin_left = -14.9891
margin_top = -30.3337
margin_right = -14.9891
margin_bottom = -30.3337

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 31 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="StateMachine"]
visible = false
position = Vector2( -0.569513, 9.60508 )
scale = Vector2( 0.979673, 1.25357 )
pause_animated_sprites = false
process_parent = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 42 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.56951, 4.52018 )
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="." groups=[
"Hitboxes",
]]
position = Vector2( -0.56951, -49.4673 )
collision_layer = 2
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.231373, 0.137255, 0.894118, 1 )
position = Vector2( 0.56951, 51.9192 )
shape = SubResource( 3 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"AttackAreas",
]]
position = Vector2( -0.56951, 22.5327 )
collision_layer = 2
collision_mask = 257

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea"]
position = Vector2( 41.9419, -20.0808 )
scale = Vector2( 0.500025, 0.437349 )
polygon = PoolVector2Array( -133.302, -23.4692, -127.291, -31.7553, -106.433, -47.7212, -84.8672, -55.1989, -64.8924, -55.1989, -72.6702, -36.8078, -105.903, -32.7658, -116.332, -17.2041, -109.791, -3.86549, -75.4985, 0.580719, -51.6348, -8.91799, -66.8369, 7.85632, -93.7056, 10.6857, -118.807, 6.64372, -133.655, -8.71589 )
disabled = true

[node name="AttackDetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2( -0.56951, 22.1408 )
collision_layer = 0
collision_mask = 257

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetectionArea"]
position = Vector2( -8.13389, -27.7891 )
shape = SubResource( 4 )
disabled = true

[node name="JumpDetectionRaycasters" type="Node2D" parent="."]
visible = false
position = Vector2( -0.56951, 22.5327 )

[node name="JumpDetectionRaycaster" type="RayCast2D" parent="JumpDetectionRaycasters"]
position = Vector2( -14.9891, -28.181 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 8

[node name="PlayerDetectionRaycasters" type="Node2D" parent="."]
visible = false
position = Vector2( -0.56951, 22.5327 )

[node name="PlayerDetectionRaycaster" type="RayCast2D" parent="PlayerDetectionRaycasters"]
position = Vector2( 0, -20.0808 )
enabled = true
cast_to = Vector2( -200, 0 )
collision_mask = 257

[node name="PlayerDetectionRaycasterBack" type="RayCast2D" parent="PlayerDetectionRaycasters"]
position = Vector2( 0, -20.0808 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 257

[node name="Blood" type="Position2D" parent="."]
show_behind_parent = true

[node name="AlertTimeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DetectionTimer" type="Timer" parent="."]
one_shot = true

[node name="PopUpSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 7.86611, -48.776 )
frames = SubResource( 5 )
animation = "question_mark"

[node name="DeathTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/Death = SubResource( 6 )
anims/PopUp = ExtResource( 44 )
anims/Start = SubResource( 7 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/damage_flash = ExtResource( 43 )

[connection signal="hurt" from="." to="StateMachine" method="_on_HeavyBandit_hurt"]
[connection signal="killed" from="." to="StateMachine" method="_on_HeavyBandit_killed"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_HeavyBanditSprite_animation_finished"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="body_entered" from="AttackDetectionArea" to="." method="_on_AttackDetectionArea_body_entered"]
[connection signal="body_exited" from="AttackDetectionArea" to="." method="_on_AttackDetectionArea_body_exited"]
[connection signal="timeout" from="AlertTimeout" to="." method="_on_AlertTimeout_timeout"]
[connection signal="timeout" from="DetectionTimer" to="." method="_on_DetectionTimer_timeout"]
